--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Игра в пятнашки</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
     <div class="page">
@@ -28,6 +28,6 @@
         </div>
         <button class="button" id="shuffle">Shuffle</button>
     </div>
-    <script defer src="/src/js/script.js" type="module"></script>
+    <script defer src="./src/js/script.js" type="module"></script>
 </body>
 </html>
